@startuml

title __ENEMYPRODUCT's Class Diagram__\n

  namespace com.example.aircraftwar {
    namespace JavaCode.edu.hitsz {
      namespace aircraft {
        namespace EnemyProduct {
          class com.example.aircraftwar.JavaCode.edu.hitsz.aircraft.EnemyProduct.BaseEnemy {
              + BaseEnemy()
              + changeShootNum()
              + shoot()
              + update()
          }
        }
      }
    }
  }
  

  namespace com.example.aircraftwar {
    namespace JavaCode.edu.hitsz {
      namespace aircraft {
        namespace EnemyProduct {
          class com.example.aircraftwar.JavaCode.edu.hitsz.aircraft.EnemyProduct.BossEnemy {
              ~ speedY : int
              - direction : int
              - power : int
              - shootNum : int
              + BossEnemy()
              + changeShootNum()
              + forward()
              + getAcIndex()
              + shoot()
          }
        }
      }
    }
  }
  

  namespace com.example.aircraftwar {
    namespace JavaCode.edu.hitsz {
      namespace aircraft {
        namespace EnemyProduct {
          class com.example.aircraftwar.JavaCode.edu.hitsz.aircraft.EnemyProduct.EliteEnemy {
              ~ speedX : int
              ~ speedY : int
              - direction : int
              - power : int
              - shootNum : int
              + EliteEnemy()
              + changeShootNum()
              + forward()
              + getAcIndex()
              + shoot()
              + update()
          }
        }
      }
    }
  }
  

  namespace com.example.aircraftwar {
    namespace JavaCode.edu.hitsz {
      namespace aircraft {
        namespace EnemyProduct {
          class com.example.aircraftwar.JavaCode.edu.hitsz.aircraft.EnemyProduct.MobEnemy {
              + MobEnemy()
              + changeShootNum()
              + forward()
              + getAcIndex()
              + shoot()
              + update()
          }
        }
      }
    }
  }
  

  com.example.aircraftwar.JavaCode.edu.hitsz.aircraft.EnemyProduct.BaseEnemy .up.|> com.example.aircraftwar.JavaCode.edu.hitsz.observer.Subscriber
  com.example.aircraftwar.JavaCode.edu.hitsz.aircraft.EnemyProduct.BaseEnemy -up-|> com.example.aircraftwar.JavaCode.edu.hitsz.aircraft.AbstractAircraft
  com.example.aircraftwar.JavaCode.edu.hitsz.aircraft.EnemyProduct.BossEnemy -up-|> com.example.aircraftwar.JavaCode.edu.hitsz.aircraft.EnemyProduct.BaseEnemy
  com.example.aircraftwar.JavaCode.edu.hitsz.aircraft.EnemyProduct.EliteEnemy .up.|> com.example.aircraftwar.JavaCode.edu.hitsz.observer.Subscriber
  com.example.aircraftwar.JavaCode.edu.hitsz.aircraft.EnemyProduct.EliteEnemy -up-|> com.example.aircraftwar.JavaCode.edu.hitsz.aircraft.EnemyProduct.BaseEnemy
  com.example.aircraftwar.JavaCode.edu.hitsz.aircraft.EnemyProduct.MobEnemy .up.|> com.example.aircraftwar.JavaCode.edu.hitsz.observer.Subscriber
  com.example.aircraftwar.JavaCode.edu.hitsz.aircraft.EnemyProduct.MobEnemy -up-|> com.example.aircraftwar.JavaCode.edu.hitsz.aircraft.EnemyProduct.BaseEnemy


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
